# Xfa

./: TODO.md  meson.build
doc/: BINARY INDEX FORMAT-1.0.txt  XFA TRANSFER PROTOCOL-1.0.txt
src/: main.c  meson.build
src/xfa/: meson.build  sha256.c  sha256.h  xfa.c  xfa.h
src/xfa/helpers/: fsys.h  fsys.unix.c  fsys.win32.c  io.c  io.def.h  io.h  meson.build
